--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">About Us</string>
+    <string name="action_notification">Notifications</string>
     <string name="title_activity_about_us">About Us</string>
     <!--<string name="action_settings">Settings</string>-->
 
@@ -47,6 +48,10 @@
 
     <string name="parse_app_id">hmnwgjOQDOOWvEaQZH1fqyh1YRQtPgu74VsJiGES</string>
     <string name="parse_client_key">Ev8L2yoavyAmnDw6xN8BrcpXTTBwF0TbCoRravKO</string>
-    <!--7ngX6wo9vHWTDVVRpa9gfoy3cx3QRGpyv3eHIlqQ
-    1nCCmWPKHTOZTSyUibR2VgeKGnOBKXmuRcPLGshJ-->
+
+        <string name="action_settings">Settings</string>
+        <string name="action_add_favourite">Add to Favourites</string>
+        <string name="action_play_next">Play Next</string>
+        <string name="backdrop_title">LOVE MUSIC</string>
+        <string name="backdrop_subtitle">This season top 20 albums</string>
 </resources>
