Mac | Payment Done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="VersionNumber">2.3</string>
-    <string name="app_name">Oil Mill Calculator</string>
+    <string name="app_name">RP Oil Mill Calculator</string>
     <string name="privacypolicy">.<a href='http://www.oilmillcalculator.madeovercode.com/privacypolicy'>Privacy Policy</a></string>
     <string name="title_section1">Groundnut</string>
     <string name="title_section2">Cotton Seed</string>
@@ -54,4 +54,5 @@
         <string name="action_play_next">Play Next</string>
         <string name="backdrop_title">LOVE MUSIC</string>
         <string name="backdrop_subtitle">This season top 20 albums</string>
+    <string name="trial_version">Trial Version</string>
 </resources>
